--- a/index.html
+++ b/index.html
@@ -1,64 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>316example by dikembe3000</title>
+<head>
+<meta charset="utf-8"/>
+<script src="index_files/htmlwidgets-0.8/htmlwidgets.js"></script>
+<script src="index_files/jquery-1.11.1/jquery.min.js"></script>
+<link href="index_files/leaflet-0.7.3/leaflet.css" rel="stylesheet" />
+<script src="index_files/leaflet-0.7.3/leaflet.js"></script>
+<link href="index_files/leafletfix-1.0.0/leafletfix.css" rel="stylesheet" />
+<script src="index_files/leaflet-binding-1.0.1/leaflet.js"></script>
+<script src="index_files/leaflet-providers-1.0.27/leaflet-providers.js"></script>
+<script src="index_files/leaflet-providers-plugin-1.0.1/leaflet-providers-plugin.js"></script>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>316example</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/dikembe3000/316example">View the Project on GitHub <small>dikembe3000/316example</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/dikembe3000/316example/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/dikembe3000/316example/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/dikembe3000/316example">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/dikembe3000">dikembe3000</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+</head>
+<body style="background-color:white;">
+<div id="htmlwidget_container">
+  <div id="htmlwidget-798ff077b2e99443acb3" style="width:100%;height:400px;" class="leaflet html-widget"></div>
+</div>
+<script type="application/json" data-for="htmlwidget-798ff077b2e99443acb3">{"x":{"calls":[{"method":"addProviderTiles","args":["CartoDB.Positron",null,null,{"errorTileUrl":"","noWrap":false,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false}]},{"method":"addCircleMarkers","args":[[40.873983,40.876055,40.875771,40.877134,40.877458],[-124.076055,-124.076055,-124.079569,-124.077573,-124.078994],[4,6,5,12,21],null,null,{"lineCap":null,"lineJoin":null,"clickable":true,"pointerEvents":null,"className":"","stroke":true,"color":["Blue","Green","Green","Red","Orange"],"weight":1,"opacity":0.5,"fill":true,"fillColor":["Blue","Green","Green","Red","Orange"],"fillOpacity":0.2,"dashArray":null},null,null,["nap422@humboldt.edu","nap422@humboldt.edu","nap422@humboldt.edu","nap422@humboldt.edu","nap422@humboldt.edu"]]}],"limits":{"lat":[40.873983,40.877458],"lng":[-124.079569,-124.076055]}},"evals":[],"jsHooks":[]}</script>
+<script type="application/htmlwidget-sizing" data-for="htmlwidget-798ff077b2e99443acb3">{"viewer":{"width":"100%","height":400,"padding":0,"fill":true},"browser":{"width":"100%","height":400,"padding":0,"fill":true}}</script>
+</body>
 </html>
